# iSpan_python-FE_DM-cookbooks

./: .cursorrules  .gitignore  GIT_IGNORE_GUIDE.md  README.md  UV_GUIDE.md  conversion.ipynb  data_download.py  download_data.ipynb  notebooks_conversion.py  pdf2word.py  pyproject.toml
assets/: make_assets.py
course_slides/: MLOps_平台比較分析與建議.docx  ~$Ops_平台比較分析與建議.docx  ~$工程系統化分析指南.docx  特徵工程系統化分析指南.docx
data_mining_course/: README.md
data_mining_course/docs/: faq.md  references.md  schedule.md  syllabus.md
data_mining_course/environment/: environment.yml  requirements.txt
data_mining_course/environment/docker/: Dockerfile  docker-compose.yml
data_mining_course/modules/module_01_eda_intro/: README.md
data_mining_course/modules/module_01_eda_intro/notebooks/: 01_pandas_basics.ipynb  01_pandas_basics.prompts.md  01_pandas_basics.py  02_data_visualization.ipynb  02_data_visualization.prompts.md  02_data_visualization.py  03_exploratory_analysis.ipynb  03_exploratory_analysis.prompts.md  03_exploratory_analysis.py
data_mining_course/modules/module_01_eda_intro/slides/: EDA_Systematic_Workflow_Guide.md  M1_Fundamentals_of_Systematic_EDA.md
data_mining_course/modules/module_02_data_cleaning/: README.md
data_mining_course/modules/module_02_data_cleaning/notebooks/: 01_chunking_large_files.ipynb  01_chunking_large_files.prompts.md  01_chunking_large_files.py  02_handling_duplicates.ipynb  02_handling_duplicates.prompts.md  02_handling_duplicates.py  03_data_type_conversion.ipynb  03_data_type_conversion.prompts.md  03_data_type_conversion.py  04_text_cleaning.ipynb  04_text_cleaning.prompts.md  04_text_cleaning.py
data_mining_course/modules/module_02_data_cleaning/slides/: M2_Data_Cleaning_Fundamentals.md
data_mining_course/modules/module_03_missing_outliers/: README.md
data_mining_course/modules/module_03_missing_outliers/notebooks/: 01_missing_data_overview.ipynb  (+11 more)
data_mining_course/modules/module_04_categorical_encoding/: README.md
data_mining_course/modules/module_05_scaling_transformation/: README.md
data_mining_course/modules/module_06_feature_creation/: README.md
data_mining_course/modules/module_07_feature_selection/: README.md
data_mining_course/modules/module_08_time_series/: README.md
data_mining_course/modules/module_09_multimodal_features/: README.md
data_mining_course/modules/module_10_data_mining_applications/: README.md
data_mining_course/modules/module_11_large_model_training/: README.md
data_mining_course/projects/final/: evaluation_criteria.md  requirements.md
data_mining_course/projects/midterm/: evaluation_criteria.md  requirements.md
data_mining_course/projects/project/: car_market_eda.ipynb
data_mining_course/templates/: notebook_template.ipynb  project_template.ipynb
data_mining_course/utils/: data_loader.py  evaluation.py  preprocessing.py  visualization.py
(+175 files in other folders)
